# finvenkisto

./: .gitignore  LEGUMIN.txt  Makefile.am  autogen.sh  configure.ac
data/: ARTCREDITS  Makefile.am  fv-map-fragment.glsl  fv-simple-fragment.glsl  fv-simple-vertex.glsl  map-texture.xcf  person.blend  person.ply
src/: Makefile.am  configure-emscripten.js  finvenkisto-shell.html  fv-allocate-image-store.c  fv-allocate-image-store.h  fv-allocate-store.c  fv-allocate-store.h  fv-array-object.c  fv-array-object.h  fv-buffer.c  fv-buffer.h  fv-circle-painter.c  fv-circle-painter.h  fv-data.c  fv-data.h  fv-ease.c  fv-ease.h  fv-editor.c  fv-error-message-emscripten.c  fv-error-message.c  fv-error-message.h  fv-flush-memory.c  fv-flush-memory.h  fv-game.c  fv-game.h  fv-gl-funcs.h  fv-gl.c  fv-gl.h  fv-highlight-painter.c  fv-highlight-painter.h  fv-hud.c  fv-hud.h  fv-image-data-emscripten.c  fv-image-data-old.c  fv-image-data-old.h  fv-image-data.c  fv-image-data.h  fv-image.c  fv-image.h  fv-input.c  (+45 more)
src/data/: ARTCREDITS  ARTCREDITS.txt  Makefile.am  bambo1.xcf  bambo2.xcf  bambo3.xcf  barrel.blend  barrel.ply  bed.blend  bed.ply  chair.blend  chair.ply  chalkboard.xcf  fv-color-fragment.glsl  fv-color-vertex.glsl  fv-hud-vertex.glsl  fv-lighting-texture-fragment.glsl  fv-lighting.glsl  fv-map-vertex.glsl  fv-person-fragment.glsl  fv-person-vertex.glsl  fv-special-color-vertex.glsl  fv-special-fragment.glsl  fv-special-texture-fragment.glsl  fv-special-texture-vertex.glsl  fv-special-vertex.glsl  fv-texture-fragment.glsl  fv-texture-vertex.glsl  gufujestro.xcf  make-atlas.py  make-digits.py  make-map-texture.py  make-miping.py  person.blend  person.ply  person.xcf  pyjamas.xcf  sleeping-bag.xcf  table.blend  table.ply  (+5 more)
src/data/shaders/: compile-shaders.sh  fv-circle-tcs.glsl  fv-circle-tcs.spirv  fv-circle-tes.glsl  fv-circle-tes.spirv  fv-circle-vertex.glsl  fv-circle-vertex.spirv  fv-color-fragment.glsl  fv-color-fragment.spirv  fv-highlight-vertex.glsl  fv-highlight-vertex.spirv  fv-hud-vertex.glsl  fv-hud-vertex.spirv  fv-lighting-texture-fragment.glsl  fv-lighting-texture-fragment.spirv  fv-map-vertex.glsl  fv-map-vertex.spirv  fv-person-fragment.glsl  fv-person-fragment.spirv  fv-person-vertex.glsl  fv-person-vertex.spirv  fv-special-color-vertex.glsl  fv-special-color-vertex.spirv  fv-special-texture-vertex.glsl  fv-special-texture-vertex.spirv  fv-texture-fragment.glsl  fv-texture-fragment.spirv  fv-texture-vertex.glsl  fv-texture-vertex.spirv
src/rply/: Makefile.am  convert.c  rply.c  rply.h
